# AdvCpp

./: CMakeLists.txt  README.md  main.cpp  mainProc.cpp
homework1/: README.md
homework1/src/: process.cpp
homework2/: CMakeLists.txt  README.md
homework2/examples/: CMakeLists.txt  main.cpp
homework2/include/: baselogger.h  filelogger.h  logger.h  stderrlogger.h  stdoutlogger.h
homework2/src/: baselogger.cpp  filelogger.cpp  logger.cpp  stderrlogger.cpp  stdoutlogger.cpp
homework3/: CMakeLists.txt  README.md
homework3/examples/: CMakeLists.txt  clientMain.cpp  serverMain.cpp
homework3/include/: connection.h  server.h  socketexception.h
homework3/src/: connection.cpp  server.cpp
homework4/: README.md
homework4/examples/: CMakeLists.txt  serverMain.cpp
homework4/include/: connection.h  filedescriptor.h  server.h
homework4/src/: connection.cpp  server.cpp
include/: pipe.h  process.h
src/: pipe.cpp  process.cpp
